--- a/package.json
+++ b/package.json
@@ -12,13 +12,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.2.1",
+    "@angular/cdk": "^11.2.2",
     "@angular/common": "~11.2.1",
     "@angular/compiler": "~11.2.1",
     "@angular/core": "~11.2.1",
     "@angular/forms": "~11.2.1",
+    "@angular/localize": "~11.2.1",
+    "@angular/material": "^11.2.2",
+    "@angular/material-moment-adapter": "^11.2.3",
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "angular-reactive-validation": "^5.0.0",
+    "bootstrap": "^4.5.0",
+    "cpf-cnpj-validator": "^1.0.3",
+    "moment": "^2.29.1",
+    "ngx-mask": "^11.1.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
