--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,7 +23,7 @@ steps:
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
-          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/app-vacina/dist/app-vacina/'
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dist/app-vacina/'
           includeRootFolder: false
           archiveType: zip
           archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
