--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -12,10 +12,11 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '10.x'
+    versionSpec: '12.x'
   displayName: 'Install Node.js'
 
 - script: |
+    cd '$(System.DefaultWorkingDirectory)/vacinabrasilfront'
     npm install -g @angular/cli
     npm install
     ng build --prod
@@ -23,7 +24,7 @@ steps:
 - task: ArchiveFiles@2
   displayName: 'Archive files'
   inputs:
-          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/dist/app-vacina/'
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)/vacinabrasilfront/dist/app-vacina/'
           includeRootFolder: false
           archiveType: zip
           archiveFile: $(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip
@@ -34,3 +35,25 @@ steps:
           PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
           ArtifactName: 'drop'
           publishLocation: 'Container'
+          
+- task: deploy   
+  displayName: 'Deploy Web App'
+  dependsOn: Build
+  condition: succeeded()
+  jobs:
+  - deployment: DeploymentJob
+    pool:
+      vmImage: 'ubuntu-20.04'
+    environment: $(environmentName)
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+
+          - task: AzureWebApp@1
+            displayName: 'Deploy Azure Web App : $(webAppName)'
+            inputs:
+              azureSubscription: $(azureSubscription)
+              appName: $(webAppName)
+              appType: webAppLinux
+              package: $(Pipeline.Workspace)/drop/$(Build.BuildId).zip
